src/objects/Postal_Codes__c.object
<CustomObject>
    <description>Postal Code Reference for Postal Codes associated with Territories</description>
    <fields>
        <fullName>Change_Note__c</fullName>
        <label>Change Note</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <externalId>true</externalId>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Picklist__c</fullName>
        <label>Country_Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_ETM_Code_Last_Updated__c</fullName>
        <defaultValue>null</defaultValue>
        <label>ETM Code Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DC_ETM_Code__c</fullName>
        <label>ETM Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_UpdateCode__c</fullName>
        <formula>(DC_ETM_Code__c = null)||(LastModifiedDate &gt; DC_ETM_Code_Last_Updated__c)||(DC_ETM_Code_Last_Updated__c = null)</formula>
        <label>UpdateCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Note__c</fullName>
        <label>Source Note</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateName__c</fullName>
        <label>StateName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_10_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory 10 User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Postal_Codes4U1g</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_11_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory 11 User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Postal_CodesntuP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_12_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory 12 User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Postal_CodesntuU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Territory_10__c</fullName>
        <label>User Territory 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Territory_11__c</fullName>
        <label>User Territory 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Territory_12__c</fullName>
        <label>User Territory 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode_external_ID__c</fullName>
        <externalId>true</externalId>
        <label>ZipCode external ID</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Postal Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Territory_2_User__c</columns>
        <columns>Territory_3_User__c</columns>
        <columns>Territory_5_User__c</columns>
        <columns>Territory_8_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>testpost</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>User_Territory_6__c</columns>
        <columns>User_Territory_7__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>City__c</field>
            <operation>equals</operation>
            <value>San Jose</value>
        </filters>
        <label>test</label>
    </listViews>
    <nameField>
        <label>Postal Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postal Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>